--- a/res/scss/view/_list-item.scss
+++ b/res/scss/view/_list-item.scss
@@ -137,7 +137,7 @@
 			{
 					display: flex;
 					flex-direction: column;
-					position: static;
+					position: relative;
 				}
 		}
 
